--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "grunt-contrib-nodeunit": "~0.2.0",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-internal": "~0.4.5",
-    "grunt": "~0.4.1"
+    "grunt": "~0.4.1",
+    "lodash": "^4.17.4"
   },
   "peerDependencies": {
     "grunt": "~0.4.1"
