--- a/package.json
+++ b/package.json
@@ -35,11 +35,11 @@
     "grunt-contrib-nodeunit": "~0.2.0",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-internal": "~0.4.5",
-    "grunt": "~0.4.1",
+    "grunt": ">=0.4.0",
     "lodash": "^4.17.4"
   },
   "peerDependencies": {
-    "grunt": "~0.4.1"
+    "grunt": ">=0.4.0"
   },
   "keywords": [
     "gruntplugin"
